Resolves: tdf#130922 don't crash removing non-existing elements

Change-Id: Id05faf6537ae096d563c57dcde71cd65ae04152d